--- a/ansible/roles/immich/templates/immich.json.j2
+++ b/ansible/roles/immich/templates/immich.json.j2
@@ -118,7 +118,7 @@
         "storageQuotaClaim": "immich_quota"
     },
     "passwordLogin": {
-        "enabled": false
+        "enabled": true
     },
     "storageTemplate": {
         "enabled": false,
